--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ button{
     font-size: 1.1rem;
 }
 .modal-texto {
-    word-wrap: break-word;
-    hyphens: auto; /* permite guiones automáticos elegantes */
+    max-width: 90%;
+    margin: auto;
+    text-align: center;
 }
