--- a/modal.css
+++ b/modal.css
@@ -216,19 +216,22 @@ body {
     padding: 10px;
   }
 
-  .modal-content h3 {
-    font-size: 0.98rem;
-  }
+  .modal-content {
+    min-width: 300px !important; /* evita que el modal sea muy estrecho */
+    max-width: 90%;
+}
 }
 
 /* TABLET / small desktop tweaks */
-@media (min-width: 481px) and (max-width: 1024px) {
-  .modal-dialog {
-    width: 85%;
-    max-width: 700px;
-  }
+@media (max-width: 600px) {
+    .modal-texto {
+        font-size: 1.1rem;
+        line-height: 1.45;
+        padding: 10px;
+    }
+}
 
-  .modal-content h3 {
+  .modal-content p {
     font-size: 1rem;
   }
 }
